--- a/game-proxy.html
+++ b/game-proxy.html
@@ -208,7 +208,7 @@
                 }
                 
                 // 直接跳转到GameNora游戏页面
-                window.location.href = 'https://www.gamenora.com/embed/steal-a-brainrot';
+                window.location.href = 'https://st.8games.net/7/8g/igra-ukradi-brejnrot-onlajn/';
             }, 2000);
         }
         
