--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                                         <div class="text-6xl mb-4">🎮</div>
                                         <h3 class="text-2xl font-bold mb-4">Ready to Play?</h3>
                                         <p class="mb-6 opacity-90">Click below to start playing Steal Brainrot!</p>
-                                        <button onclick="loadGameInIframe()" class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-4 px-8 rounded-full text-lg transition-colors shadow-lg">
+                                        <button onclick="loadGameInFrame()" class="bg-yellow-500 hover:bg-yellow-600 text-black font-bold py-4 px-8 rounded-full text-lg transition-colors shadow-lg">
                                             🚀 Launch Game
                                         </button>
                                     </div>
