--- a/game-shell.html
+++ b/game-shell.html
@@ -297,7 +297,7 @@
     <script>
         class PWAGameShell {
             constructor() {
-                this.gameUrl = 'https://st.8games.net/7/8g/igra-ukradi-brejnrot-onlajn/';
+                this.gameUrl = 'https://steal-brainrot.io/steal-brainrot-online.embed';
                 this.fallbackUrls = [
                     'https://www.gameflare.com/online-game/roblox-steal-a-brainrot/',
                     'https://www.crazygames.com/game/steal-brainrot-online',
