--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
             gameFrame.classList.remove('hidden');
             
             // 设置iframe源
-            gameIframe.src = 'https://st.8games.net/7/8g/igra-ukradi-brejnrot-onlajn/';
+            gameIframe.src = 'https://steal-brainrot.io/steal-brainrot-online.embed';
             
             // 追踪游戏加载
             if (typeof gtag !== 'undefined') {
