--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://stealbrainrot.co/">
+
+    <!-- IndexNow Verification -->
+    <meta name="google-site-verification" content="IndexNow key: ca9a891f04ce241bbd0bc01843ee0b9a">
     
     <!-- Hreflang Tags for Subdomain Multilingual SEO -->
     <link rel="alternate" hreflang="en" href="https://stealbrainrot.co/" />
