--- a/ja/index.html
+++ b/ja/index.html
@@ -992,7 +992,7 @@
                 gameFrame.classList.remove('hidden');
                 
                 // 设置iframe源
-                gameIframe.src = 'https://steal-brainrot.io/steal-brainrot-online.embed';
+                gameIframe.src = 'https://robbrainrot.io/steal-a-brainrot-unblocked.embed';
             }, 1500);
         }
         
