--- a/games/Steal-Brainrot-Online/index.html
+++ b/games/Steal-Brainrot-Online/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Steal Brainrot Online — Play Steal Brainrot Online Free Multiplayer Heist Game</title>
   <meta name="description" content="Play Steal Brainrot Online free! Collect rare Italian meme animals, steal from other players, and defend your base in this addictive multiplayer heist game. No download required!">
-  <link rel="canonical" href="/games/Steal-Brainrot-Online/">
+  <link rel="canonical" href="https://stealbrainrot.co/games/Steal-Brainrot-Online/">
   <meta property="og:title" content="Steal Brainrot Online — Play Free Multiplayer Heist Game">
   <meta property="og:description" content="Experience the chaotic multiplayer heist game where you collect, steal, and defend rare Italian Brainrot memes. Play free in your browser!">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="/games/Steal-Brainrot-Online/">
+  <meta property="og:url" content="https://stealbrainrot.co/games/Steal-Brainrot-Online/">
   <meta name="robots" content="index,follow">
   
   <!-- Google tag (gtag.js) -->
@@ -96,7 +96,7 @@
     <section aria-label="Game Player" class="max-w-4xl mx-auto mt-6">
       <div id="sboPlayer" class="bg-white rounded-lg shadow-xl overflow-hidden">
         <div class="aspect-video">
-          <iframe id="sboIframe" class="w-full h-full border-0" src="https://steal-brainrot.io/steal-brainrot-online.embed" title="Steal Brainrot Online" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe id="sboIframe" class="w-full h-full border-0" src="https://robbrainrot.io/steal-a-brainrot-unblocked.embed" title="Steal Brainrot Online" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
       <div class="bg-white rounded-lg shadow-md border border-gray-100 mt-3 p-4 flex items-center justify-between">
