--- a/games/Steal-A-Brainrot-2/index.html
+++ b/games/Steal-A-Brainrot-2/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Steal A Brainrot 2 — Play Steal A Brainrot 2 Free Online Game</title>
   <meta name="description" content="Play Steal A Brainrot 2 free! Experience the sequel to the popular Brainrot collection game with new features and challenges. No download required!">
-  <link rel="canonical" href="/games/Steal-A-Brainrot-2/">
+  <link rel="canonical" href="https://stealbrainrot.co/games/Steal-A-Brainrot-2/">
   <meta property="og:title" content="Steal A Brainrot 2 — Play Free Collection Game">
   <meta property="og:description" content="Experience the sequel to the popular Brainrot collection game in Steal A Brainrot 2, with new features and exciting challenges.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="/games/Steal-A-Brainrot-2/">
+  <meta property="og:url" content="https://stealbrainrot.co/games/Steal-A-Brainrot-2/">
   <meta name="robots" content="index,follow">
   
   <!-- Google tag (gtag.js) -->
@@ -96,7 +96,7 @@
     <section aria-label="Game Player" class="max-w-4xl mx-auto mt-6">
       <div id="sab2Player" class="bg-white rounded-lg shadow-xl overflow-hidden">
         <div class="aspect-video">
-          <iframe id="sab2Iframe" class="w-full h-full border-0" src="https://steal-brainrot.io/steal-a-brainrot-2.embed" title="Steal A Brainrot 2" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe id="sab2Iframe" class="w-full h-full border-0" src="https://robbrainrot.io/steal-a-brainrot-unblocked.embed" title="Steal A Brainrot 2" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
       <div class="bg-white rounded-lg shadow-md border border-gray-100 mt-3 p-4 flex items-center justify-between">
