--- a/games/Steal-a-Brainrot-3D/index.html
+++ b/games/Steal-a-Brainrot-3D/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Steal a Brainrot 3D — Play Steal a Brainrot 3D Free Online Game</title>
   <meta name="description" content="Play Steal a Brainrot 3D free! Experience the ultimate 3D heist game where you collect rare Italian meme animals in immersive 3D environments. No download required!">
-  <link rel="canonical" href="/games/Steal-a-Brainrot-3D/">
+  <link rel="canonical" href="https://stealbrainrot.co/games/Steal-a-Brainrot-3D/">
   <meta property="og:title" content="Steal a Brainrot 3D — Play Free 3D Heist Game">
   <meta property="og:description" content="Dive into the 3D world of Steal a Brainrot 3D where you collect, steal, and defend rare Italian Brainrot memes in stunning 3D environments.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="/games/Steal-a-Brainrot-3D/">
+  <meta property="og:url" content="https://stealbrainrot.co/games/Steal-a-Brainrot-3D/">
   <meta name="robots" content="index,follow">
   
   <!-- Google tag (gtag.js) -->
@@ -96,7 +96,7 @@
     <section aria-label="Game Player" class="max-w-4xl mx-auto mt-6">
       <div id="sab3dPlayer" class="bg-white rounded-lg shadow-xl overflow-hidden">
         <div class="aspect-video">
-          <iframe id="sab3dIframe" class="w-full h-full border-0" src="https://steal-brainrot.io/steal-a-brainrot-3d.embed" title="Steal a Brainrot 3D" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe id="sab3dIframe" class="w-full h-full border-0" src="https://robbrainrot.io/steal-a-brainrot-unblocked.embed" title="Steal a Brainrot 3D" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
       <div class="bg-white rounded-lg shadow-md border border-gray-100 mt-3 p-4 flex items-center justify-between">
